2010-09-13  Marek Kowalski  <mkowalski@flumotion.com>

	* flumotion/component/bouncers/multibouncerplug.py
	Fixed one more incompatibility with 2.4.

2010-09-13  Marek Kowalski  <mkowalski@flumotion.com>

	* flumotion/component/bouncers/multibouncer.py
	Fixed usage of Expection().message argument incompatible with 2.4

2010-09-10  Marek Kowalski  <mkowalski@flumotion.com>

	* flumotion/component/base/http.py:
	* flumotion/test/test_bouncers_multibouncer.py:
	Tests for multibouncer with incorrect configuration and expiring 
	the keycards.
	Tracked one ugly silent fail.

2010-09-08  Marek Kowalski  <mkowalski@flumotion.com>

        * flumotion/test/test_bouncers_multibouncer.py:
	Tests for MultiBouncerPlug.

2010-09-08  Marek Kowalski  <mkowalski@flumotion.com>

	* flumotion/test/test_bouncers_multibouncer.py:
	Typo fix, fix the build.

2010-09-08  Marek Kowalski  <mkowalski@flumotion.com>

	* flumotion/test/test_bouncers_multibouncer.py:
	Add simple tests for multibouncer combination logic.

2010-09-07  Josep Joan Ribas  <jribas@flumotion.com>

	* flumotion/component/component.py:
	Add remote call to get the mood of the component.

2010-09-01  Xavier Queralt  <xqueralt@flumotion.com>

	* flumotion/component/decodercomponent.py:
	* flumotion/component/decoders/generic/generic.xml:
	Add the audiorate effect to the decoder's audio output.
	Completelly remove the deinterlace effect from the decoder.

2010-09-07  Xavier Queralt  <xqueralt@flumotion.com>

	reviewed by: Andoni Morales

	* configure.ac:
	* flumotion/component/effects/Makefile.am:
	* flumotion/component/effects/audiorate:
	* flumotion/component/effects/audiorate/Makefile.am:
	* flumotion/component/effects/audiorate/__init__.py:
	* flumotion/component/effects/audiorate/audiorate.py:
	* flumotion/component/effects/audiorate/audiorate.xml:
	Add an effect to resample audio streams

2010-09-07  Xavier Queralt  <xqueralt@flumotion.com>

	* flumotion/component/decoders/generic/generic.xml: