@@ -27,6 +27,7 @@ Depends: ${python:Depends},
          gstreamer0.10-plugins-base,
          gstreamer0.10-plugins-good,
          gstreamer0.10-schroedinger,
+         gstreamer0.10-ffmpeg,
          python-dateutil,
 	 python-glade2,
          python-gobject,
